--- a/HowtoFind-Lecture.html
+++ b/HowtoFind-Lecture.html
@@ -69,9 +69,12 @@ Mindy L. Mallory
 </div>
 <div id="futures-data-sources" class="slide section level1">
 <h1>Futures Data Sources</h1>
-<p>For agricultural commodities in the United States, the <a href="http://www.cmegroup.com/">CME Group</a> is the most important futures exchange for price discovery. - Grain and oil-seed contracts traded at the CME Group include corn, soybeans, soybean oil, soybean meal, soft red winter wheat, hard red winter wheat. - They also list futures contracts for livestock products such as live cattle, lean hogs, and feeder cattle. - ‘Soft’ commodities that trade on the CME Group are cocoa, coffee, and sugar. - The CME Group also lists energy commodity products for crude oil, natural gas, ethanol, and other products.</p>
+<p>For agricultural commodities in the United States, the <a href="http://www.cmegroup.com/">CME Group</a> is the most important futures exchange for price discovery. - Grain and oil-seed contracts traded at the CME Group include corn, soybeans, soybean oil, soybean meal, soft red winter wheat, hard red winter wheat. - They also list futures contracts for livestock products such as live cattle, lean hogs, and feeder cattle. - ‘Soft’ commodities that trade on the CME Group are cocoa, coffee, and sugar. - The CME Group also lists energy commodity products for crude oil, natural gas, ethanol, and other products. # Futures Data Sources</p>
 <p>This book will focus most intently on the grain and oil-seed contracts, with some topics related to the cattle and energy contracts considered. Many of these futures contracts are considered to be the main price setting function for the commodity in the world.</p>
 <p>Chicago Board of Trade (owned by the CME Group) futures prices of corn and soybeans are considered the ‘World Price’ of corn and soybeans. Meaning that all over the globe, prices for these commodities are set based on what the price of corn and soybeans are trading on the CME Group exchanges.</p>
+</div>
+<div id="futures-data-sources-1" class="slide section level1">
+<h1>Futures Data Sources</h1>
 <p>Real-time (10-min delay) data can be obtained directly from the CME Group’s website. There you can view the most recent quotes, and some charting capability is provided as well. Typically, however, it is more convenient to obtain market quotes from third party vendors like <a href="http://finance.yahoo.com/">Yahoo Finance</a>, <a href="https://www.quandl.com/collections/futures">Quandl</a>, <a href="http://www.barchart.com/futures/marketoverview">barchart</a> (subscription required), or others. Those sources offer a more flexible interface for viewing on the web, and provide utility to download recent price history.</p>
 </div>
 <div id="futures-symbols-and-looking-up-data-by-contract-expiration" class="slide section level1">
@@ -105,45 +108,132 @@ Mindy L. Mallory
 <td align="left">Corn</td>
 <td align="center">C</td>
 <td align="left">March (H), May (K), July (N), September (U), December (Z)</td>
-<td align="left">CZ15, December 2015 Corn</td>
-<td align="left"><a href="http://finance.yahoo.com/q;_ylt=Aq08zZO8Y0A5GdeM2aZSNJJ.FJF4?uhb=uhb2&amp;fr=uh3_finance_vert_gs&amp;type=2button&amp;s=cz15.cbt">CZ15.cbt</a></td>
-<td align="left"><a href="https://www.quandl.com/data/CME/CZ2015-Corn-Futures-December-2015-CZ2015">CME/CZ2015</a></td>
+<td align="left">CZ16, December 2016 Corn</td>
+<td align="left"><a href="http://finance.yahoo.com/q;_ylt=Aq08zZO8Y0A5GdeM2aZSNJJ.FJF4?uhb=uhb2&amp;fr=uh3_finance_vert_gs&amp;type=2button&amp;s=cz16.cbt">CZ16.cbt</a></td>
+<td align="left"><a href="https://www.quandl.com/data/CME/CZ2016-Corn-Futures-December-2016-CZ2015">CME/CZ2016</a></td>
 </tr>
 <tr class="even">
 <td align="left">Soybeans</td>
 <td align="center">S</td>
 <td align="left">January (F), March (H), May (K), July (N), August (Q), September (U), November (X)</td>
-<td align="left">SX15, November 2015 Soybean</td>
-<td align="left"><a href="http://finance.yahoo.com/q;_ylt=Ajq44ku8k3rd1HzDOLpIozEnv7gF?uhb=uhb2&amp;fr=uh3_finance_vert_gs&amp;type=2button&amp;s=sx15.cbt">SX15.cbt</a></td>
-<td align="left"><a href="https://www.quandl.com/data/CME/SX2015-Soybean-Futures-November-2015-SX2015">CME/SX2015</a></td>
+<td align="left">SX16, November 2016 Soybean</td>
+<td align="left"><a href="http://finance.yahoo.com/quote/SX16.CBT/?p=SX16.CBT">SX16.cbt</a></td>
+<td align="left"><a href="https://www.quandl.com/data/CME/SX2016-Soybean-Futures-November-2016-SX2016">CME/SX2016</a></td>
+</tr>
+<tr class="odd">
+<td align="left">Canola/Rapeseed</td>
+<td align="center">RS</td>
+<td align="left">January (F), March (H), May (K), July (N), November (X)</td>
+<td align="left">RSX16, November 2016</td>
+<td align="left"><a href="http://www.barchart.com/quotes/futures/RSX16">RSX16</a> (Barchart)</td>
+<td align="left"><a href="https://www.quandl.com/data/ICE/RSX2016-Canola-Futures-November-2016-RSX2016">ICE/RSX2016</a></td>
+</tr>
+<tr class="even">
+<td align="left">HRW Wheat</td>
+<td align="center">KW</td>
+<td align="left">March (H), May (K), July (N), September (U), December (Z)</td>
+<td align="left">KWN17, July 2017 KC Wheat</td>
+<td align="left"><a href="https://finance.yahoo.com/quote/KWN17.CBT?p=KWN17.CBT">KWN17.cbt</a></td>
+<td align="left"><a href="https://www.quandl.com/data/CME/KWN2017-KC-HRW-Wheat-Futures-July-2017-KWN2017">CME/KWN2017</a></td>
 </tr>
 <tr class="odd">
 <td align="left">SRW Wheat</td>
 <td align="center">W</td>
 <td align="left">March (H), May (K), July (N), September (U), December (Z)</td>
-<td align="left">WZ15, December 2015 SRW Wheat</td>
-<td align="left"><a href="http://finance.yahoo.com/q;_ylt=Ajq44ku8k3rd1HzDOLpIozEnv7gF?uhb=uhb2&amp;fr=uh3_finance_vert_gs&amp;type=2button&amp;s=wz15.cbt">WZ15.cbt</a></td>
-<td align="left"><a href="https://www.quandl.com/data/CME/WZ2015-Wheat-Futures-December-2015-WZ2015">CME/WZ2015</a></td>
+<td align="left">WZ16, December 2016 SRW Wheat</td>
+<td align="left"><a href="http://finance.yahoo.com/q;_ylt=Ajq44ku8k3rd1HzDOLpIozEnv7gF?uhb=uhb2&amp;fr=uh3_finance_vert_gs&amp;type=2button&amp;s=wz16.cbt">WZ16.cbt</a></td>
+<td align="left"><a href="https://www.quandl.com/data/CME/WZ2016-Wheat-Futures-December-2016-WZ2016">CME/WZ2016</a></td>
+</tr>
+<tr class="even">
+<td align="left">HRS Wheat</td>
+<td align="center">MW</td>
+<td align="left">March (H), May (K), July (N), September (U), December (Z)</td>
+<td align="left">MWZ16, Dec 2017 Minn Wheat</td>
+<td align="left">NA</td>
+<td align="left"><a href="https://www.quandl.com/data/MGEX/MWZ2016-Minneapolis-Hard-Red-Spring-Wheat-Futures-December-2016-MWZ2016">MGE/MWZ2016</a></td>
+</tr>
+<tr class="odd">
+<td align="left">Live Cattle</td>
+<td align="center">LC</td>
+<td align="left">Feb (G), Apr (J), Jun (M), Aug (Q), Oct (V), Dec (Z)</td>
+<td align="left">LCZ16, December 2016 Live Cattle</td>
+<td align="left"><a href="http://finance.yahoo.com/quote/LCZ16.CME/?p=LCZ16.CME">LCZ16.CME</a></td>
+<td align="left"><a href="https://www.quandl.com/data/CME/LCZ2016-Live-Cattle-Futures-December-2016-LCZ2016">CME/LCZ2016</a></td>
 </tr>
 <tr class="even">
 <td align="left">Lean Hogs</td>
-<td align="center">HE</td>
+<td align="center">LH</td>
 <td align="left">Feb (G), Apr (J), May (K), Jun (M), Jul (N), Aug (Q), Oct (V), Dec (Z)</td>
-<td align="left">HEZ15, December 2015 Lean Hogs</td>
-<td align="left"><a href="http://finance.yahoo.com/q;_ylt=Ajq44ku8k3rd1HzDOLpIozEnv7gF?uhb=uhb2&amp;fr=uh3_finance_vert_gs&amp;type=2button&amp;s=HEZ15.CME%2C">HEZ15.cme</a></td>
-<td align="left"><a href="https://www.quandl.com/data/CME/LNZ2015-Lean-Hog-Futures-December-2015-LNZ2015">CME/LNZ2015</a></td>
+<td align="left">LHZ16, December 2016 Lean Hogs</td>
+<td align="left"><a href="http://finance.yahoo.com/quote/LHZ16.CME/?p=LHZ16.CME">LHZ16.cme</a></td>
+<td align="left"><a href="https://www.quandl.com/data/CME/LNZ2016-Lean-Hog-Futures-December-2016-LNZ2016">CME/LNZ2016</a></td>
 </tr>
 <tr class="odd">
 <td align="left">Crude Oil</td>
 <td align="center">CL</td>
 <td align="left">All months</td>
-<td align="left">CLU15, September 2015 Light Sweet Crude Oil</td>
-<td align="left"><a href="http://finance.yahoo.com/q;_ylt=Ajq44ku8k3rd1HzDOLpIozEnv7gF?uhb=uhb2&amp;fr=uh3_finance_vert_gs&amp;type=2button&amp;s=clu15.nym">CLU15.nym</a></td>
-<td align="left"><a href="https://www.quandl.com/data/CME/CLU2015-Crude-Oil-Futures-September-2015-CLU2015">CME/CLU2015</a></td>
+<td align="left">CLZ16, Dec 2016 Light Sweet Crude Oil</td>
+<td align="left"><a href="http://finance.yahoo.com/quote/CLZ16.NYM/?p=CLZ16.NYM">CLZ16.nym</a></td>
+<td align="left"><a href="https://www.quandl.com/data/CME/CLZ2016-Crude-Oil-Futures-September-2016-CLZ2016">CME/CLZ2016</a></td>
+</tr>
+<tr class="even">
+<td align="left">RBOB Gasoline</td>
+<td align="center">RB</td>
+<td align="left">All months</td>
+<td align="left">RBZ16, Dec 2016 RBOB Gas</td>
+<td align="left"><a href="https://finance.yahoo.com/quote/RBZ16-1.NYM?p=RBZ16-1.NYM">RBZ16.nym</a></td>
+<td align="left"><a href="https://www.quandl.com/data/CME/RBZ2016-RBOB-Gasoline-Physical-Futures-December-2016-RBZ2016">CME/RBZ2016</a></td>
+</tr>
+<tr class="odd">
+<td align="left">Heating Oil</td>
+<td align="center">HO</td>
+<td align="left">All months</td>
+<td align="left">HOZ16, Dec 2016 HO (Ultra low sulfer deisel)</td>
+<td align="left"><a href="https://finance.yahoo.com/quote/HOZ16.NYM/?p=HOZ16.NYM">HOZ16.NYM</a></td>
+<td align="left"><a href="https://www.quandl.com/data/CME/HOZ2016-NY-Harbor-ULSD-Futures-December-2016-HOZ2016">CME/HOZ2016</a></td>
+</tr>
+<tr class="even">
+<td align="left">Ethanol</td>
+<td align="center">EH</td>
+<td align="left">All Months</td>
+<td align="left">EHZ16, Dec 2016 Ethanol Futures</td>
+<td align="left"><a href="https://finance.yahoo.com/quote/EHZ16-2.CBT/futures?p=EHZ16-2.CBT">EHZ16.CBT</a></td>
+<td align="left"><a href="https://www.quandl.com/data/CME/EHZ2016-Ethanol-Futures-December-2016-EHZ2016">CME/EHZ2016</a></td>
 </tr>
 </tbody>
 </table>
 <p>While every market participant needs to know the current price, forecasting and decision making requires the study of historical prices and other important market variables. Historical futures price data is available for free and from subscription based services from <a href="https://quandl.com">Quandl</a> and <a href="https://barchart.com">Barchart</a> mentioned in the paragraph above. Historical <a href="http://farmdoc.agricharts.com/markets/historic.php">futures price data</a> and <a href="http://www.farmdoc.illinois.edu/manage/pricehistory/price_history.html">average price recieved</a> is also available from <a href="http://www.farmdoc.illinois.edu">farmdoc</a>, the online extension presence of the University of Illinois’ <a href="http://ace.illinois.edu/">Agricultural and Consumer Economics</a> department.</p>
+</div>
+<div id="section-1" class="slide section level1">
+<h1></h1>
+<p>Table 3 provides some links to spread charts for commodity spreads we will cover in this class.</p>
+<table>
+<caption>Table 3. Commodity Spreads</caption>
+<thead>
+<tr class="header">
+<th align="left">Spread</th>
+<th align="left">Link</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">Soybean Crush</td>
+<td align="left"><a href="http://www.barchart.com/chart.php?ss=1&amp;spread=-ZS*1%2B2.2*ZM*1%2B11*ZL*1&amp;p=DO&amp;d=M&amp;sd=&amp;ed=&amp;size=M&amp;log=0&amp;t=LINE&amp;g=1&amp;sh=100&amp;indicators=&amp;addindicator=#jump">Barchart Spread Chart</a></td>
+</tr>
+<tr class="even">
+<td align="left">Cattle Crush</td>
+<td align="left"><a href="http://www2.econ.iastate.edu/estimated-returns/Finishing%20Steer%20Calves%20Chart.pdf">ISU Spread Calculation</a> <a href="http://www2.econ.iastate.edu/estimated-returns/">ISU Livestock Returns</a></td>
+</tr>
+<tr class="odd">
+<td align="left">Corn Crush</td>
+<td align="left"><a href="http://www.extension.iastate.edu/agdm/refirst.html">ISU Ethanol Grind Margin</a> (Download Ethanol Profitability spreadsheet. Look at Grind Margin chart)</td>
+</tr>
+<tr class="even">
+<td align="left">Crude Oil Crack Spread</td>
+<td align="left"><a href="http://www.barchart.com/chart.php?ss=1&amp;spread=%28-3*CL*1+%2B+2*RB*1*42+%2B+HO*1*42%29+%2F+3&amp;p=DO&amp;d=M&amp;sd=&amp;ed=&amp;size=M&amp;log=0&amp;t=LINE&amp;g=1&amp;sh=100&amp;indicators=&amp;addindicator=#jump">Barchart Spread</a></td>
+</tr>
+</tbody>
+</table>
 </div>
 <div id="reports-and-data-from-the-usda" class="slide section level1">
 <h1>Reports and Data from the USDA</h1>
@@ -205,7 +295,7 @@ Mindy L. Mallory
 <h1>USDA Reports Influential in Commodity Markets</h1>
 <dl>
 <dt>Crop Progress and Condition</dt>
-<dd><p>Crop Progress and Condition reports are issued every <strong>Monday</strong> during the planting, growing, and harvest season for major crops in the United States. The weekly updates provide market participants critical information about the status of the crop. Nass surveys approximately 4,000 individuals in major growing areas familiar with the crops. Check out one of the weekly tables <a href="http://usda.mannlib.cornell.edu/usda/current/CropProg/CropProg-08-31-2015.pdf">August 3, 2015</a> and summary charts <a href="http://www.nass.usda.gov/Charts_and_Maps/Crop_Progress_&amp;_Condition/2015/US_2015.pdf">US Progress and Condition</a></p>
+<dd><p>Crop Progress and Condition reports are issued every <strong>Monday</strong> during the planting, growing, and harvest season for major crops in the United States. The weekly updates provide market participants critical information about the status of the crop. Nass surveys approximately 4,000 individuals in major growing areas familiar with the crops. Check out one of the weekly tables <a href="http://usda.mannlib.cornell.edu/usda/current/CropProg/CropProg-08-29-2016.txt">August 29, 2016</a> and summary charts <a href="https://www.nass.usda.gov/Charts_and_Maps/Crop_Progress_&amp;_Condition/2016/US_2016.pdf">US Progress and Condition</a></p>
 </dd>
 </dl>
 </div>
