--- a/Excel-files/ForecastingProduction-HistoricalAcreage_files/sheet004.htm
+++ b/Excel-files/ForecastingProduction-HistoricalAcreage_files/sheet004.htm
@@ -57,9 +57,9 @@ else
  collapse;table-layout:fixed;width:1200pt'>
  <col width=64 span=25 style='width:48pt'>
  <tr height=90 style='height:67.5pt'>
-  <td rowspan=3 height=131 class=xl79 width=64 style='border-bottom:1.0pt dashed #ACA899;
+  <td rowspan=3 height=131 class=xl81 width=64 style='border-bottom:1.0pt dashed #ACA899;
   height:98.25pt;width:48pt'>Program</td>
-  <td rowspan=3 class=xl82 width=64 style='border-bottom:.5pt dotted black;
+  <td rowspan=3 class=xl84 width=64 style='border-bottom:.5pt dotted black;
   width:48pt'>Year</td>
   <td rowspan=3 class=xl67 width=64 style='border-bottom:.5pt dotted black;
   width:48pt'>Period</td>
@@ -82,9 +82,9 @@ else
   <td class=xl67 width=64 style='border-left:none;width:48pt'>CORN, GRAIN -
   PRICE RECEIVED, MEASURED IN $ / BU&nbsp;</td>
   <td width=64 style='width:48pt'></td>
-  <td rowspan=3 class=xl79 width=64 style='border-bottom:1.0pt dashed #ACA899;
+  <td rowspan=3 class=xl81 width=64 style='border-bottom:1.0pt dashed #ACA899;
   width:48pt'>Program</td>
-  <td rowspan=3 class=xl82 width=64 style='border-bottom:.5pt dotted black;
+  <td rowspan=3 class=xl84 width=64 style='border-bottom:.5pt dotted black;
   width:48pt'>Year</td>
   <td rowspan=3 class=xl67 width=64 style='border-bottom:.5pt dotted black;
   width:48pt'>Period</td>
@@ -132,9 +132,9 @@ else
     o:connecttype="rect"/>
    <o:lock v:ext="edit" shapetype="t"/>
   </v:shapetype><v:shape id="_x0000_s2049" type="#_x0000_t201" style='position:absolute;
-   margin-left:0;margin-top:0;width:20.25pt;height:18.75pt;z-index:1'
-   strokecolor="windowText [64]" o:insetmode="auto">
-   <v:imagedata src="image025.emz" o:title=""/>
+   direction:LTR;text-align:left;margin-left:0;margin-top:0;width:20.25pt;
+   height:18.75pt;z-index:1' strokecolor="windowText [64]" o:insetmode="auto">
+   <v:imagedata src="image023.emz" o:title=""/>
    <x:ClientData ObjectType="Pict">
     <x:SizeWithCells/>
     <x:CF>Pict</x:CF>
@@ -142,7 +142,7 @@ else
    </x:ClientData>
   </v:shape><![endif]--><![if !vml]><span style='mso-ignore:vglayout;
   position:absolute;z-index:1;margin-left:0px;margin-top:0px;width:27px;
-  height:25px'><![endif]><![if !vml]><img width=27 height=25 src=image026.png
+  height:25px'><![endif]><![if !vml]><img width=27 height=25 src=image024.png
   v:shapes="_x0000_s2049"></span><![endif]><span style='mso-ignore:vglayout2'>
   <table cellpadding=0 cellspacing=0>
    <tr>
@@ -152,10 +152,10 @@ else
   </span></td>
   <td rowspan=2 height=41 width=64 style='mso-ignore:colspan-rowspan;
   height:30.75pt;width:48pt'><!--[if gte vml 1]><v:shape id="_x0000_s2050"
-   type="#_x0000_t201" style='position:absolute;margin-left:0;margin-top:0;
-   width:20.25pt;height:21pt;z-index:2' strokecolor="windowText [64]"
-   o:insetmode="auto">
-   <v:imagedata src="image027.emz" o:title=""/>
+   type="#_x0000_t201" style='position:absolute;direction:LTR;text-align:left;
+   margin-left:0;margin-top:0;width:20.25pt;height:21pt;z-index:2'
+   strokecolor="windowText [64]" o:insetmode="auto">
+   <v:imagedata src="image025.emz" o:title=""/>
    <x:ClientData ObjectType="Pict">
     <x:SizeWithCells/>
     <x:CF>Pict</x:CF>
@@ -168,7 +168,7 @@ else
    </tr>
    <tr>
     <td></td>
-    <td><![endif]><![if !vml]><img width=27 height=28 src=image028.png v:shapes="_x0000_s2050"></td>
+    <td><![endif]><![if !vml]><img width=27 height=28 src=image026.png v:shapes="_x0000_s2050"></td>
     <td width=37></td>
    </tr>
    <tr>
@@ -178,10 +178,10 @@ else
   </span><![endif]><!--[if !mso & vml]><span style='width:48.0pt;height:30.75pt'></span><![endif]--></td>
   <td colspan=11 style='mso-ignore:colspan'></td>
   <td width=64 style='width:48pt' align=left valign=top><!--[if gte vml 1]><v:shape
-   id="_x0000_s2057" type="#_x0000_t201" style='position:absolute;
-   margin-left:0;margin-top:0;width:20.25pt;height:18.75pt;z-index:5'
-   strokecolor="windowText [64]" o:insetmode="auto">
-   <v:imagedata src="image025.emz" o:title=""/>
+   id="_x0000_s2057" type="#_x0000_t201" style='position:absolute;direction:LTR;
+   text-align:left;margin-left:0;margin-top:0;width:20.25pt;height:18.75pt;
+   z-index:5' strokecolor="windowText [64]" o:insetmode="auto">
+   <v:imagedata src="image023.emz" o:title=""/>
    <x:ClientData ObjectType="Pict">
     <x:SizeWithCells/>
     <x:CF>Pict</x:CF>
@@ -189,7 +189,7 @@ else
    </x:ClientData>
   </v:shape><![endif]--><![if !vml]><span style='mso-ignore:vglayout;
   position:absolute;z-index:5;margin-left:0px;margin-top:0px;width:27px;
-  height:25px'><![endif]><![if !vml]><img width=27 height=25 src=image026.png
+  height:25px'><![endif]><![if !vml]><img width=27 height=25 src=image024.png
   v:shapes="_x0000_s2057"></span><![endif]><span style='mso-ignore:vglayout2'>
   <table cellpadding=0 cellspacing=0>
    <tr>
@@ -199,10 +199,10 @@ else
   </span></td>
   <td rowspan=2 height=41 width=64 style='mso-ignore:colspan-rowspan;
   height:30.75pt;width:48pt'><!--[if gte vml 1]><v:shape id="_x0000_s2058"
-   type="#_x0000_t201" style='position:absolute;margin-left:0;margin-top:0;
-   width:20.25pt;height:21pt;z-index:6' strokecolor="windowText [64]"
-   o:insetmode="auto">
-   <v:imagedata src="image027.emz" o:title=""/>
+   type="#_x0000_t201" style='position:absolute;direction:LTR;text-align:left;
+   margin-left:0;margin-top:0;width:20.25pt;height:21pt;z-index:6'
+   strokecolor="windowText [64]" o:insetmode="auto">
+   <v:imagedata src="image025.emz" o:title=""/>
    <x:ClientData ObjectType="Pict">
     <x:SizeWithCells/>
     <x:CF>Pict</x:CF>
@@ -215,7 +215,7 @@ else
    </tr>
    <tr>
     <td></td>
-    <td><![endif]><![if !vml]><img width=27 height=28 src=image028.png v:shapes="_x0000_s2058"></td>
+    <td><![endif]><![if !vml]><img width=27 height=28 src=image026.png v:shapes="_x0000_s2058"></td>
     <td width=37></td>
    </tr>
    <tr>
@@ -273,41 +273,47 @@ else
   <td class=xl71 width=64 style='width:48pt'>&nbsp;</td>
   <td colspan=11 style='mso-ignore:colspan'></td>
  </tr>
- <tr height=21 style='height:15.75pt'>
-  <td height=21 class=xl71 width=64 style='height:15.75pt;width:48pt'>&nbsp;</td>
-  <td colspan=12 style='mso-ignore:colspan'></td>
-  <td class=xl71 width=64 style='width:48pt'>&nbsp;</td>
-  <td colspan=11 style='mso-ignore:colspan'></td>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 align=left style='height:15.0pt'>Program</td>
+  <td class=xl66 align=left>Year</td>
+  <td class=xl76 align=left>Corn Aver<span style='display:none'>age Prices
+  Received by Farmers</span></td>
+  <td class=xl76 colspan=5 align=left style='mso-ignore:colspan'>Soybean
+  Average Prices Received by Farmers</td>
+  <td colspan=17 style='mso-ignore:colspan'></td>
  </tr>
- <tr height=21 style='height:15.75pt'>
-  <td height=21 class=xl71 width=64 style='height:15.75pt;width:48pt'>&nbsp;</td>
-  <td colspan=12 style='mso-ignore:colspan'></td>
-  <td class=xl71 width=64 style='width:48pt'>&nbsp;</td>
-  <td colspan=11 style='mso-ignore:colspan'></td>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 align=left style='height:15.0pt'>SURVEY</td>
+  <td align=right>2016</td>
+  <td colspan=23 style='mso-ignore:colspan'></td>
  </tr>
- <tr height=21 style='height:15.75pt'>
-  <td height=21 class=xl71 width=64 style='height:15.75pt;width:48pt'>&nbsp;</td>
-  <td colspan=12 style='mso-ignore:colspan'></td>
-  <td class=xl71 width=64 style='width:48pt'>&nbsp;</td>
-  <td colspan=11 style='mso-ignore:colspan'></td>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 align=left style='height:15.0pt'>SURVEY</td>
+  <td class=xl66 align=right>2015</td>
+  <td class=xl77 width=64 style='width:48pt'>3.71</td>
+  <td class=xl79 align=right>9.49</td>
+  <td colspan=21 style='mso-ignore:colspan'></td>
  </tr>
- <tr height=21 style='height:15.75pt'>
-  <td height=21 class=xl71 width=64 style='height:15.75pt;width:48pt'>&nbsp;</td>
-  <td colspan=12 style='mso-ignore:colspan'></td>
-  <td class=xl71 width=64 style='width:48pt'>&nbsp;</td>
-  <td colspan=11 style='mso-ignore:colspan'></td>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 align=left style='height:15.0pt'>SURVEY</td>
+  <td class=xl66 align=right>2014</td>
+  <td class=xl77 width=64 style='border-top:none;width:48pt'>4.11</td>
+  <td class=xl73 width=64 style='border-left:none;width:48pt'>12.5</td>
+  <td colspan=21 style='mso-ignore:colspan'></td>
  </tr>
- <tr height=21 style='height:15.75pt'>
-  <td height=21 class=xl71 width=64 style='height:15.75pt;width:48pt'>&nbsp;</td>
-  <td colspan=12 style='mso-ignore:colspan'></td>
-  <td class=xl71 width=64 style='width:48pt'>&nbsp;</td>
-  <td colspan=11 style='mso-ignore:colspan'></td>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 align=left style='height:15.0pt'>SURVEY</td>
+  <td class=xl66 align=right>2013</td>
+  <td class=xl77 width=64 style='border-top:none;width:48pt'>6.15</td>
+  <td class=xl73 width=64 style='border-top:none;border-left:none;width:48pt'>14.1</td>
+  <td colspan=21 style='mso-ignore:colspan'></td>
  </tr>
- <tr height=21 style='height:15.75pt'>
-  <td height=21 class=xl71 width=64 style='height:15.75pt;width:48pt'>&nbsp;</td>
-  <td colspan=12 style='mso-ignore:colspan'></td>
-  <td class=xl71 width=64 style='width:48pt'>&nbsp;</td>
-  <td colspan=11 style='mso-ignore:colspan'></td>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 align=left style='height:15.0pt'>SURVEY</td>
+  <td class=xl66 align=right>2012</td>
+  <td class=xl77 width=64 style='border-top:none;width:48pt'>6.67</td>
+  <td class=xl73 width=64 style='border-top:none;border-left:none;width:48pt'>14</td>
+  <td colspan=21 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=21 style='height:15.75pt'>
   <td height=21 class=xl71 width=64 style='height:15.75pt;width:48pt'>&nbsp;</td>
@@ -342,9 +348,10 @@ else
  <tr height=21 style='height:15.75pt'>
   <td height=21 width=64 style='height:15.75pt;width:48pt' align=left
   valign=top><!--[if gte vml 1]><v:shape id="_x0000_s2051" type="#_x0000_t201"
-   style='position:absolute;margin-left:0;margin-top:0;width:20.25pt;height:18.75pt;
-   z-index:3' strokecolor="windowText [64]" o:insetmode="auto">
-   <v:imagedata src="image025.emz" o:title=""/>
+   style='position:absolute;direction:LTR;text-align:left;margin-left:0;
+   margin-top:0;width:20.25pt;height:18.75pt;z-index:3' strokecolor="windowText [64]"
+   o:insetmode="auto">
+   <v:imagedata src="image023.emz" o:title=""/>
    <x:ClientData ObjectType="Pict">
     <x:SizeWithCells/>
     <x:CF>Pict</x:CF>
@@ -352,38 +359,17 @@ else
    </x:ClientData>
   </v:shape><![endif]--><![if !vml]><span style='mso-ignore:vglayout;
   position:absolute;z-index:3;margin-left:0px;margin-top:0px;width:27px;
-  height:25px'><![endif]><![if !vml]><img width=27 height=25 src=image026.png
+  height:25px'><![endif]><![if !vml]><img width=27 height=25 src=image024.png
   v:shapes="_x0000_s2051"></span><![endif]><span style='mso-ignore:vglayout2'>
   <table cellpadding=0 cellspacing=0>
    <tr>
-    <td height=21 class=xl70 width=64 style='height:15.75pt;width:48pt'></td>
+    <td height=21 class=xl72 width=64 style='height:15.75pt;width:48pt'>SURVEY</td>
    </tr>
   </table>
   </span></td>
   <td align=left valign=top><!--[if gte vml 1]><v:shape id="_x0000_s2052"
-   type="#_x0000_t201" style='position:absolute;margin-left:0;margin-top:0;
-   width:20.25pt;height:21pt;z-index:4' strokecolor="windowText [64]"
-   o:insetmode="auto">
-   <v:imagedata src="image027.emz" o:title=""/>
-   <x:ClientData ObjectType="Pict">
-    <x:SizeWithCells/>
-    <x:CF>Pict</x:CF>
-    <x:AutoPict/>
-   </x:ClientData>
-  </v:shape><![endif]--><![if !vml]><span style='mso-ignore:vglayout;
-  position:absolute;z-index:4;margin-left:0px;margin-top:0px;width:27px;
-  height:28px'><![endif]><![if !vml]><img width=27 height=28 src=image028.png
-  v:shapes="_x0000_s2052"></span><![endif]><span style='mso-ignore:vglayout2'>
-  <table cellpadding=0 cellspacing=0>
-   <tr>
-    <td height=21 width=64 style='height:15.75pt;width:48pt'></td>
-   </tr>
-  </table>
-  </span></td>
-  <td colspan=11 style='mso-ignore:colspan'></td>
-  <td width=64 style='width:48pt' align=left valign=top><!--[if gte vml 1]><v:shape
-   id="_x0000_s2059" type="#_x0000_t201" style='position:absolute;
-   margin-left:0;margin-top:0;width:20.25pt;height:18.75pt;z-index:7'
+   type="#_x0000_t201" style='position:absolute;direction:LTR;text-align:left;
+   margin-left:0;margin-top:0;width:20.25pt;height:21pt;z-index:4'
    strokecolor="windowText [64]" o:insetmode="auto">
    <v:imagedata src="image025.emz" o:title=""/>
    <x:ClientData ObjectType="Pict">
@@ -392,50 +378,112 @@ else
     <x:AutoPict/>
    </x:ClientData>
   </v:shape><![endif]--><![if !vml]><span style='mso-ignore:vglayout;
-  position:absolute;z-index:7;margin-left:0px;margin-top:0px;width:27px;
-  height:25px'><![endif]><![if !vml]><img width=27 height=25 src=image026.png
-  v:shapes="_x0000_s2059"></span><![endif]><span style='mso-ignore:vglayout2'>
+  position:absolute;z-index:4;margin-left:0px;margin-top:0px;width:27px;
+  height:28px'><![endif]><![if !vml]><img width=27 height=28 src=image026.png
+  v:shapes="_x0000_s2052"></span><![endif]><span style='mso-ignore:vglayout2'>
   <table cellpadding=0 cellspacing=0>
    <tr>
-    <td height=21 class=xl70 width=64 style='height:15.75pt;width:48pt'></td>
+    <td height=21 class=xl66 align=right width=64 style='height:15.75pt;
+    width:48pt'>2015</td>
    </tr>
   </table>
   </span></td>
-  <td align=left valign=top><!--[if gte vml 1]><v:shape id="_x0000_s2060"
-   type="#_x0000_t201" style='position:absolute;margin-left:0;margin-top:0;
-   width:20.25pt;height:21pt;z-index:8' strokecolor="windowText [64]"
-   o:insetmode="auto">
-   <v:imagedata src="image027.emz" o:title=""/>
+  <td colspan=11 style='mso-ignore:colspan'></td>
+  <td rowspan=2 height=42 class=xl70 width=64 style='mso-ignore:colspan-rowspan;
+  height:31.5pt;width:48pt'><!--[if gte vml 1]><v:shape id="_x0000_s2059"
+   type="#_x0000_t201" style='position:absolute;direction:LTR;text-align:left;
+   margin-left:0;margin-top:0;width:20.25pt;height:18.75pt;z-index:7'
+   strokecolor="windowText [64]" o:insetmode="auto">
+   <v:imagedata src="image023.emz" o:title=""/>
    <x:ClientData ObjectType="Pict">
     <x:SizeWithCells/>
     <x:CF>Pict</x:CF>
     <x:AutoPict/>
    </x:ClientData>
-  </v:shape><![endif]--><![if !vml]><span style='mso-ignore:vglayout;
-  position:absolute;z-index:8;margin-left:0px;margin-top:0px;width:27px;
-  height:28px'><![endif]><![if !vml]><img width=27 height=28 src=image028.png
-  v:shapes="_x0000_s2060"></span><![endif]><span style='mso-ignore:vglayout2'>
+  </v:shape><![endif]--><![if !vml]><span style='mso-ignore:vglayout'>
   <table cellpadding=0 cellspacing=0>
    <tr>
-    <td height=21 width=64 style='height:15.75pt;width:48pt'></td>
+    <td width=0 height=0></td>
+   </tr>
+   <tr>
+    <td></td>
+    <td><![endif]><![if !vml]><img width=27 height=25 src=image024.png v:shapes="_x0000_s2059"></td>
+    <td width=37></td>
+   </tr>
+   <tr>
+    <td height=17></td>
    </tr>
   </table>
-  </span></td>
+  </span><![endif]><!--[if !mso & vml]><span style='width:48.0pt;height:31.5pt'></span><![endif]--></td>
+  <td rowspan=2 height=42 width=64 style='mso-ignore:colspan-rowspan;
+  height:31.5pt;width:48pt'><!--[if gte vml 1]><v:shape id="_x0000_s2060"
+   type="#_x0000_t201" style='position:absolute;direction:LTR;text-align:left;
+   margin-left:0;margin-top:0;width:20.25pt;height:21pt;z-index:8'
+   strokecolor="windowText [64]" o:insetmode="auto">
+   <v:imagedata src="image025.emz" o:title=""/>
+   <x:ClientData ObjectType="Pict">
+    <x:SizeWithCells/>
+    <x:CF>Pict</x:CF>
+    <x:AutoPict/>
+   </x:ClientData>
+  </v:shape><![endif]--><![if !vml]><span style='mso-ignore:vglayout'>
+  <table cellpadding=0 cellspacing=0>
+   <tr>
+    <td width=0 height=0></td>
+   </tr>
+   <tr>
+    <td></td>
+    <td><![endif]><![if !vml]><img width=27 height=28 src=image026.png v:shapes="_x0000_s2060"></td>
+    <td width=37></td>
+   </tr>
+   <tr>
+    <td height=14></td>
+   </tr>
+  </table>
+  </span><![endif]><!--[if !mso & vml]><span style='width:48.0pt;height:31.5pt'></span><![endif]--></td>
+  <td colspan=10 style='mso-ignore:colspan'></td>
+ </tr>
+ <tr height=21 style='height:15.75pt'>
+  <td height=21 class=xl72 width=64 style='height:15.75pt;border-top:none;
+  width:48pt'>&nbsp;</td>
+  <td class=xl66></td>
+  <td colspan=11 style='mso-ignore:colspan'></td>
   <td colspan=10 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=31 style='height:23.25pt'>
-  <td height=31 class=xl72 width=64 style='height:23.25pt;width:48pt'>SURVEY</td>
-  <td class=xl73 width=64 style='width:48pt'>2014</td>
+  <td height=31 class=xl72 width=64 style='height:23.25pt;border-top:none;
+  width:48pt'>SURVEY</td>
+  <td class=xl73 width=64 style='width:48pt'>2015</td>
   <td class=xl73 width=64 style='border-left:none;width:48pt'>YEAR</td>
   <td class=xl73 width=64 style='border-left:none;width:48pt'>NATIONAL</td>
   <td class=xl73 width=64 style='border-left:none;width:48pt'>US TOTAL</td>
   <td class=xl73 width=64 style='border-left:none;width:48pt'>...</td>
-  <td class=xl73 width=64 style='border-left:none;width:48pt'>0</td>
+  <td class=xl73 width=64 style='border-left:none;width:48pt'>-1</td>
   <td class=xl73 width=64 style='border-left:none;width:48pt'>CORN</td>
   <td class=xl73 width=64 style='border-left:none;width:48pt'>TOTAL</td>
   <td class=xl73 width=64 style='border-left:none;width:48pt'>NOT SPECIFIED</td>
+  <td align=right>3.71</td>
+  <td class=xl73 width=64 style='width:48pt'>...</td>
+  <td></td>
+  <td class=xl70 width=64 style='width:48pt'></td>
+  <td colspan=11 style='mso-ignore:colspan'></td>
+ </tr>
+ <tr height=31 style='height:23.25pt'>
+  <td height=31 class=xl72 width=64 style='height:23.25pt;border-top:none;
+  width:48pt'>SURVEY</td>
+  <td class=xl73 width=64 style='border-top:none;width:48pt'>2014</td>
+  <td class=xl73 width=64 style='border-top:none;border-left:none;width:48pt'>YEAR</td>
+  <td class=xl73 width=64 style='border-top:none;border-left:none;width:48pt'>NATIONAL</td>
+  <td class=xl73 width=64 style='border-top:none;border-left:none;width:48pt'>US
+  TOTAL</td>
+  <td class=xl73 width=64 style='border-top:none;border-left:none;width:48pt'>...</td>
+  <td class=xl73 width=64 style='border-top:none;border-left:none;width:48pt'>0</td>
+  <td class=xl73 width=64 style='border-top:none;border-left:none;width:48pt'>CORN</td>
+  <td class=xl73 width=64 style='border-top:none;border-left:none;width:48pt'>TOTAL</td>
+  <td class=xl73 width=64 style='border-top:none;border-left:none;width:48pt'>NOT
+  SPECIFIED</td>
   <td class=xl73 width=64 style='border-left:none;width:48pt'>4.11</td>
-  <td class=xl73 width=64 style='border-left:none;width:48pt'>...</td>
+  <td class=xl73 width=64 style='border-top:none;border-left:none;width:48pt'>...</td>
   <td></td>
   <td class=xl73 width=64 style='width:48pt'>SURVEY</td>
   <td class=xl72 width=64 style='width:48pt'>2014</td>
