--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@ If you would like to collaborate on this project, please contact me. I especiall
 
 </p>
 
+<p>1.3 <a href="http://mindymallory.github.io/PriceAnalysis/PricesSpaceTime.html">Prices Over Space and Time</a>: All of the futures contracts that trade at a given time make up what is called 'The Forward Curve'*'. The forward curve is simply the prices of the deferred contracts. There is valuable information in the forward curve because it is the market's best guess of what returns to storage will be.. <a href="http://mindymallory.github.io/PriceAnalysis/PricesSpaceTime-Lecture.html">Slides</a>
+
+</p>
+
 <h3>Section 2: Balance Sheet Approach to Price Analysis in Grain and Oilseed Markets</h3>
 
 <p>2.1 <a href="http://mindymallory.github.io/PriceAnalysis/FundamentalAnalysisand.html">Fundamental Analysis and the Balance Sheet</a>: Fundamental analysis is an assessment of price based on underlying supply and demand factors. Focusing on changes in the relationship between supply and demand allows one to calibrate an informed opinion of the value of the commodity. <a href="http://mindymallory.github.io/PriceAnalysis/FundamentalAnalysisand-Lecture.html">Slides</a></p>
