--- a/PricesSpaceTime-Lecture.html
+++ b/PricesSpaceTime-Lecture.html
@@ -119,7 +119,7 @@ Mindy L. Mallory
 <p>The prior discussion has viewed the forward curve and returns to storage from the perspective of a farmer or other who holds physical stocks of grain. Speculators watch the price spread between futures contracts and trade them to bet on whether or not returns to storage will increase or decrease. These kinds of spreads are called <em>Calendar Spreads</em> and they are done by performing the following type of trade.</p>
 <h2 id="bullish">Bullish</h2>
 <p>Buy: Dec 2016, Sell: March 2017</p>
-<p>Then you are betting that prices in general will go up, but the nearby will go up more than the deferred contracts. Anything information event that suggests supplies will become tighter should make prices go up in general, and should reduce the incentive to store. Thus, making this a profitable calendar spread trade.</p>
+<p>Then you are betting that prices in general will go up, but the nearby will go up more than the deferred contracts. Any information event that suggests supplies will become tighter should make prices go up in general, and should reduce the incentive to store. Thus, making this a profitable calendar spread trade.</p>
 <h2 id="bearish">Bearish</h2>
 <p>Sell: Dec 2016, Buy: March 2017</p>
 <p>The opposite logic is at work here. You are betting that prices will go down in general, but that the nearby will go down more than the deferred contracts. Any information that suggests supplies will become more plentiful should make prices go down in general, and should increase incentives to store. Thus making the bearish calendar spread profitable.</p>
