--- a/PricesSpaceTime.html
+++ b/PricesSpaceTime.html
@@ -202,7 +202,7 @@ $(document).ready(function () {
 <div id="bullish" class="section level2">
 <h2>Bullish</h2>
 <p>Buy: Dec 2016, Sell: March 2017</p>
-<p>Then you are betting that prices in general will go up, but the nearby will go up more than the deferred contracts. Anything information event that suggests supplies will become tighter should make prices go up in general, and should reduce the incentive to store. Thus, making this a profitable calendar spread trade.</p>
+<p>Then you are betting that prices in general will go up, but the nearby will go up more than the deferred contracts. Any information event that suggests supplies will become tighter should make prices go up in general, and should reduce the incentive to store. Thus, making this a profitable calendar spread trade.</p>
 </div>
 <div id="bearish" class="section level2">
 <h2>Bearish</h2>
