--- a/Excel-files/PricesSpaceTime/forward-curves_files/sheet001.htm
+++ b/Excel-files/PricesSpaceTime/forward-curves_files/sheet001.htm
@@ -82,7 +82,7 @@ else
    </v:formulas>
    <v:path o:extrusionok="f" gradientshapeok="t" o:connecttype="rect"/>
    <o:lock v:ext="edit" aspectratio="t"/>
-  </v:shapetype><v:shape id="Chart_x0020_2" o:spid="_x0000_s1025" type="#_x0000_t75"
+  </v:shapetype><v:shape id="Chart_x0020_2" o:spid="_x0000_s1035" type="#_x0000_t75"
    style='position:absolute;direction:LTR;text-align:left;margin-left:9.75pt;
    margin-top:10.5pt;width:449.25pt;height:298.5pt;z-index:1;visibility:visible'
    o:gfxdata="UEsDBBQABgAIAAAAIQDw/NyPOgEAACwDAAATAAAAW0NvbnRlbnRfVHlwZXNdLnhtbJySTU/DMAyG
@@ -198,7 +198,7 @@ AGRycy9jaGFydHMvY29sb3JzMS54bWxQSwUGAAAAAAkACQBSAgAAexQAAAAA
    </x:ClientData>
   </v:shape><![endif]--><![if !vml]><span style='mso-ignore:vglayout;
   position:absolute;z-index:1;margin-left:13px;margin-top:14px;width:599px;
-  height:398px'><img width=599 height=398 src=image002.png v:shapes="Chart_x0020_2"></span><![endif]><span
+  height:398px'><img width=599 height=398 src=image021.png v:shapes="Chart_x0020_2"></span><![endif]><span
   style='mso-ignore:vglayout2'>
   <table cellpadding=0 cellspacing=0>
    <tr>
@@ -216,7 +216,7 @@ AGRycy9jaGFydHMvY29sb3JzMS54bWxQSwUGAAAAAAkACQBSAgAAexQAAAAA
   <td width=64 style='width:48pt'></td>
   <td width=64 style='width:48pt'></td>
   <td width=64 style='width:48pt' align=left valign=top><!--[if gte vml 1]><v:shape
-   id="Chart_x0020_7" o:spid="_x0000_s1030" type="#_x0000_t75" style='position:absolute;
+   id="Chart_x0020_7" o:spid="_x0000_s1040" type="#_x0000_t75" style='position:absolute;
    direction:LTR;text-align:left;margin-left:47.25pt;margin-top:14.25pt;
    width:449.25pt;height:298.5pt;z-index:6;visibility:visible' o:gfxdata="UEsDBBQABgAIAAAAIQDw/NyPOgEAACwDAAATAAAAW0NvbnRlbnRfVHlwZXNdLnhtbJySTU/DMAyG
 70j8hypX1GTbASG0bgc6joDQ+AFR4n6IfCnOuu3f47abJhBDFacosV8/r+0s1wdrsg4itt4VbM5n
@@ -331,7 +331,7 @@ Y2hhcnRzL2NvbG9yczEueG1sUEsFBgAAAAAJAAkAUgIAAHYUAAAAAA==
    </x:ClientData>
   </v:shape><![endif]--><![if !vml]><span style='mso-ignore:vglayout;
   position:absolute;z-index:6;margin-left:63px;margin-top:19px;width:599px;
-  height:398px'><img width=599 height=398 src=image004.png v:shapes="Chart_x0020_7"></span><![endif]><span
+  height:398px'><img width=599 height=398 src=image022.png v:shapes="Chart_x0020_7"></span><![endif]><span
   style='mso-ignore:vglayout2'>
   <table cellpadding=0 cellspacing=0>
    <tr>
@@ -447,7 +447,7 @@ Y2hhcnRzL2NvbG9yczEueG1sUEsFBgAAAAAJAAkAUgIAAHYUAAAAAA==
   <td height=20 colspan=4 style='height:15.0pt;mso-ignore:colspan'></td>
   <td colspan=11 rowspan=20 height=400 width=704 style='mso-ignore:colspan-rowspan;
   height:300.0pt;width:528pt'><!--[if gte vml 1]><v:shape id="Chart_x0020_3"
-   o:spid="_x0000_s1026" type="#_x0000_t75" style='position:absolute;
+   o:spid="_x0000_s1036" type="#_x0000_t75" style='position:absolute;
    direction:LTR;text-align:left;margin-left:45.75pt;margin-top:8.25pt;width:452.25pt;
    height:288.75pt;z-index:2;visibility:visible' o:gfxdata="UEsDBBQABgAIAAAAIQDw/NyPOgEAACwDAAATAAAAW0NvbnRlbnRfVHlwZXNdLnhtbJySTU/DMAyG
 70j8hypX1GTbASG0bgc6joDQ+AFR4n6IfCnOuu3f47abJhBDFacosV8/r+0s1wdrsg4itt4VbM5n
@@ -568,7 +568,7 @@ SwUGAAAAAAkACQBSAgAAnBQAAAAA
    </tr>
    <tr>
     <td></td>
-    <td><img width=603 height=385 src=image006.png v:shapes="Chart_x0020_3"></td>
+    <td><img width=603 height=385 src=image023.png v:shapes="Chart_x0020_3"></td>
     <td width=40></td>
    </tr>
    <tr>
@@ -579,10 +579,12 @@ SwUGAAAAAAkACQBSAgAAnBQAAAAA
   <td colspan=11 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 colspan=4 style='height:15.0pt;mso-ignore:colspan'></td>
+  <td height=20 style='height:15.0pt'></td>
+  <td align=right>1</td>
+  <td colspan=2 style='mso-ignore:colspan'></td>
   <td colspan=11 rowspan=20 height=400 width=704 style='mso-ignore:colspan-rowspan;
   height:300.0pt;width:528pt'><!--[if gte vml 1]><v:shape id="Chart_x0020_8"
-   o:spid="_x0000_s1031" type="#_x0000_t75" style='position:absolute;
+   o:spid="_x0000_s1041" type="#_x0000_t75" style='position:absolute;
    direction:LTR;text-align:left;margin-left:47.25pt;margin-top:0;width:452.25pt;
    height:4in;z-index:7;visibility:visible' o:gfxdata="UEsDBBQABgAIAAAAIQDw/NyPOgEAACwDAAATAAAAW0NvbnRlbnRfVHlwZXNdLnhtbJySTU/DMAyG
 70j8hypX1GTbASG0bgc6joDQ+AFR4n6IfCnOuu3f47abJhBDFacosV8/r+0s1wdrsg4itt4VbM5n
@@ -702,7 +704,7 @@ AAAAAAAAAE8TAABkcnMvY2hhcnRzL2NvbG9yczEueG1sUEsFBgAAAAAJAAkAUgIAAIUUAAAAAA==
    </tr>
    <tr>
     <td></td>
-    <td><img width=603 height=384 src=image008.png v:shapes="Chart_x0020_8"></td>
+    <td><img width=603 height=384 src=image024.png v:shapes="Chart_x0020_8"></td>
     <td width=38></td>
    </tr>
    <tr>
@@ -824,7 +826,7 @@ AAAAAAAAAE8TAABkcnMvY2hhcnRzL2NvbG9yczEueG1sUEsFBgAAAAAJAAkAUgIAAIUUAAAAAA==
   <td height=20 colspan=4 style='height:15.0pt;mso-ignore:colspan'></td>
   <td colspan=11 rowspan=25 height=500 width=704 style='mso-ignore:colspan-rowspan;
   height:375.0pt;width:528pt'><!--[if gte vml 1]><v:shape id="Chart_x0020_4"
-   o:spid="_x0000_s1027" type="#_x0000_t75" style='position:absolute;
+   o:spid="_x0000_s1037" type="#_x0000_t75" style='position:absolute;
    direction:LTR;text-align:left;margin-left:38.25pt;margin-top:1.5pt;width:456.75pt;
    height:360.75pt;z-index:3;visibility:visible' o:gfxdata="UEsDBBQABgAIAAAAIQDw/NyPOgEAACwDAAATAAAAW0NvbnRlbnRfVHlwZXNdLnhtbJySTU/DMAyG
 70j8hypX1GTbASG0bgc6joDQ+AFR4n6IfCnOuu3f47abJhBDFacosV8/r+0s1wdrsg4itt4VbM5n
@@ -945,7 +947,7 @@ AgAAkBQAAAAA
    </tr>
    <tr>
     <td></td>
-    <td><img width=609 height=481 src=image010.png v:shapes="Chart_x0020_4"></td>
+    <td><img width=609 height=481 src=image025.png v:shapes="Chart_x0020_4"></td>
     <td width=44></td>
    </tr>
    <tr>
@@ -955,7 +957,7 @@ AgAAkBQAAAAA
   </span><![endif]><!--[if !mso & vml]><span style='width:528.0pt;height:375.0pt'></span><![endif]--></td>
   <td colspan=11 rowspan=24 height=480 width=704 style='mso-ignore:colspan-rowspan;
   height:360.0pt;width:528pt'><!--[if gte vml 1]><v:shape id="Chart_x0020_9"
-   o:spid="_x0000_s1032" type="#_x0000_t75" style='position:absolute;
+   o:spid="_x0000_s1042" type="#_x0000_t75" style='position:absolute;
    direction:LTR;text-align:left;margin-left:47.25pt;margin-top:0;width:457.5pt;
    height:5in;z-index:8;visibility:visible' o:gfxdata="UEsDBBQABgAIAAAAIQDw/NyPOgEAACwDAAATAAAAW0NvbnRlbnRfVHlwZXNdLnhtbJySTU/DMAyG
 70j8hypX1GTbASG0bgc6joDQ+AFR4n6IfCnOuu3f47abJhBDFacosV8/r+0s1wdrsg4itt4VbM5n
@@ -1075,7 +1077,7 @@ AAAAAAAAAABQEwAAZHJzL2NoYXJ0cy9jb2xvcnMxLnhtbFBLBQYAAAAACQAJAFICAACGFAAAAAA=
    </tr>
    <tr>
     <td></td>
-    <td><img width=610 height=480 src=image012.png v:shapes="Chart_x0020_9"></td>
+    <td><img width=610 height=480 src=image026.png v:shapes="Chart_x0020_9"></td>
     <td width=31></td>
    </tr>
    <tr>
@@ -1181,7 +1183,7 @@ AAAAAAAAAABQEwAAZHJzL2NoYXJ0cy9jb2xvcnMxLnhtbFBLBQYAAAAACQAJAFICAACGFAAAAAA=
   <td height=20 colspan=4 style='height:15.0pt;mso-ignore:colspan'></td>
   <td colspan=11 rowspan=23 height=460 width=704 style='mso-ignore:colspan-rowspan;
   height:345.0pt;width:528pt'><!--[if gte vml 1]><v:shape id="Chart_x0020_5"
-   o:spid="_x0000_s1028" type="#_x0000_t75" style='position:absolute;
+   o:spid="_x0000_s1038" type="#_x0000_t75" style='position:absolute;
    direction:LTR;text-align:left;margin-left:36.75pt;margin-top:0;width:453pt;
    height:331.5pt;z-index:4;visibility:visible' o:gfxdata="UEsDBBQABgAIAAAAIQDw/NyPOgEAACwDAAATAAAAW0NvbnRlbnRfVHlwZXNdLnhtbJySTU/DMAyG
 70j8hypX1GTbASG0bgc6joDQ+AFR4n6IfCnOuu3f47abJhBDFacosV8/r+0s1wdrsg4itt4VbM5n
@@ -1302,7 +1304,7 @@ LnhtbFBLBQYAAAAACQAJAFICAAChFAAAAAA=
    </tr>
    <tr>
     <td></td>
-    <td><img width=604 height=442 src=image014.png v:shapes="Chart_x0020_5"></td>
+    <td><img width=604 height=442 src=image027.png v:shapes="Chart_x0020_5"></td>
     <td width=51></td>
    </tr>
    <tr>
@@ -1312,7 +1314,7 @@ LnhtbFBLBQYAAAAACQAJAFICAAChFAAAAAA=
   </span><![endif]><!--[if !mso & vml]><span style='width:528.0pt;height:345.0pt'></span><![endif]--></td>
   <td colspan=11 rowspan=24 height=480 width=704 style='mso-ignore:colspan-rowspan;
   height:360.0pt;width:528pt'><!--[if gte vml 1]><v:shape id="Chart_x0020_10"
-   o:spid="_x0000_s1033" type="#_x0000_t75" style='position:absolute;
+   o:spid="_x0000_s1043" type="#_x0000_t75" style='position:absolute;
    direction:LTR;text-align:left;margin-left:47.25pt;margin-top:14.25pt;
    width:453pt;height:332.25pt;z-index:9;visibility:visible' o:gfxdata="UEsDBBQABgAIAAAAIQDw/NyPOgEAACwDAAATAAAAW0NvbnRlbnRfVHlwZXNdLnhtbJySTU/DMAyG
 70j8hypX1GTbASG0bgc6joDQ+AFR4n6IfCnOuu3f47abJhBDFacosV8/r+0s1wdrsg4itt4VbM5n
@@ -1433,7 +1435,7 @@ AAAJAAkAUgIAAJcUAAAAAA==
    </tr>
    <tr>
     <td></td>
-    <td><img width=604 height=443 src=image016.png v:shapes="Chart_x0020_10"></td>
+    <td><img width=604 height=443 src=image028.png v:shapes="Chart_x0020_10"></td>
     <td width=37></td>
    </tr>
    <tr>
@@ -1512,7 +1514,7 @@ AAAJAAkAUgIAAJcUAAAAAA==
   <td height=20 colspan=4 style='height:15.0pt;mso-ignore:colspan'></td>
   <td colspan=11 rowspan=22 height=440 width=704 style='mso-ignore:colspan-rowspan;
   height:330.0pt;width:528pt'><!--[if gte vml 1]><v:shape id="Chart_x0020_6"
-   o:spid="_x0000_s1029" type="#_x0000_t75" style='position:absolute;
+   o:spid="_x0000_s1039" type="#_x0000_t75" style='position:absolute;
    direction:LTR;text-align:left;margin-left:27.75pt;margin-top:8.25pt;width:462pt;
    height:317.25pt;z-index:5;visibility:visible' o:gfxdata="UEsDBBQABgAIAAAAIQDw/NyPOgEAACwDAAATAAAAW0NvbnRlbnRfVHlwZXNdLnhtbJySTU/DMAyG
 70j8hypX1GTbASG0bgc6joDQ+AFR4n6IfCnOuu3f47abJhBDFacosV8/r+0s1wdrsg4itt4VbM5n
@@ -1633,7 +1635,7 @@ AAkACQBSAgAAlhQAAAAA
    </tr>
    <tr>
     <td></td>
-    <td><img width=616 height=423 src=image018.png v:shapes="Chart_x0020_6"></td>
+    <td><img width=616 height=423 src=image029.png v:shapes="Chart_x0020_6"></td>
     <td width=51></td>
    </tr>
    <tr>
@@ -1646,7 +1648,7 @@ AAkACQBSAgAAlhQAAAAA
   <td height=20 colspan=4 style='height:15.0pt;mso-ignore:colspan'></td>
   <td colspan=11 rowspan=22 height=440 width=704 style='mso-ignore:colspan-rowspan;
   height:330.0pt;width:528pt'><!--[if gte vml 1]><v:shape id="Chart_x0020_11"
-   o:spid="_x0000_s1034" type="#_x0000_t75" style='position:absolute;
+   o:spid="_x0000_s1044" type="#_x0000_t75" style='position:absolute;
    direction:LTR;text-align:left;margin-left:47.25pt;margin-top:0;width:462.75pt;
    height:316.5pt;z-index:10;visibility:visible' o:gfxdata="UEsDBBQABgAIAAAAIQDw/NyPOgEAACwDAAATAAAAW0NvbnRlbnRfVHlwZXNdLnhtbJySTU/DMAyG
 70j8hypX1GTbASG0bgc6joDQ+AFR4n6IfCnOuu3f47abJhBDFacosV8/r+0s1wdrsg4itt4VbM5n
@@ -1766,7 +1768,7 @@ AAAAAAAAAAAAURMAAGRycy9jaGFydHMvY29sb3JzMS54bWxQSwUGAAAAAAkACQBSAgAAhxQAAAAA
    </tr>
    <tr>
     <td></td>
-    <td><img width=617 height=422 src=image020.png v:shapes="Chart_x0020_11"></td>
+    <td><img width=617 height=422 src=image030.png v:shapes="Chart_x0020_11"></td>
     <td width=24></td>
    </tr>
    <tr>
