--- a/TheSoybeanCrush-Lecture.html
+++ b/TheSoybeanCrush-Lecture.html
@@ -174,7 +174,7 @@ Mindy L. Mallory
 <li>Buy 1 contract soybean meal</li>
 <li>Sell 1 contract soybeans</li>
 </ul>
-<p>This position makes money when the spread widens, or oil and meal go up while soybeans goes down. This is called buying the spread.</p>
+<p>This position makes money when the spread widens, or oil and meal go up while soybeans goes down. This is called buying the spread. So, to speculate that the soybean crushing industry will become more profitable, these are the trades that will profit if this comes to fruition.</p>
 </div>
 <div id="the-1-1-1-spread-1" class="slide section level1">
 <h1>The 1-1-1 Spread</h1>
@@ -184,29 +184,9 @@ Mindy L. Mallory
 <li>Sell 1 contract soybean meal</li>
 <li>Buy 1 contract soybeans</li>
 </ul>
-<p>This spread makes money when the spread narrows, or oil and meal go down while soybeans goes up.</p>
+<p>This spread makes money when the spread narrows, or oil and meal go down while soybeans goes up. Soybean crushers can sell the spread (Sell oil and meal and buy soybean futures) to hedge their GPM, or speculators can sell the spread to speculate the the soybean crushing industry will become less profitable.</p>
 </div>
 <div id="the-1-1-1-spread-2" class="slide section level1">
-<h1>The 1-1-1 Spread</h1>
-<p>One version of the board spread is called the 1-1-1 spread and it requires placing the following trades:</p>
-<ul>
-<li>Buy 1 contract soybean oil</li>
-<li>Buy 1 contract soybean meal</li>
-<li>Sell 1 contract soybeans</li>
-</ul>
-<p>This position makes money when the spread widens, or oil and meal go up while soybeans goes down. This is called buying the spread.</p>
-</div>
-<div id="the-1-1-1-spread-3" class="slide section level1">
-<h1>The 1-1-1 Spread</h1>
-<p>Another version is to sell the spread.</p>
-<ul>
-<li>Sell 1 contract soybean oil</li>
-<li>Sell 1 contract soybean meal</li>
-<li>Buy 1 contract soybeans</li>
-</ul>
-<p>This spread makes money when the spread narrows, or oil and meal go down while soybeans goes up. Soybean crushers can sell the spread (Sell oil and meal and buy soybean futures) to hedge their GPM.</p>
-</div>
-<div id="the-1-1-1-spread-4" class="slide section level1">
 <h1>The 1-1-1 Spread</h1>
 <p>The 1-1-1 spread is a crude approximation of oil processing GPM but one needs to be careful about the quantities of each commodity represented. Futures contracts for soybean oil, soybean meal, and soybeans are for the following quantities:</p>
 <ul>
