--- a/CrudeOiland-Lecture.html
+++ b/CrudeOiland-Lecture.html
@@ -56,7 +56,10 @@ Mindy L. Mallory
 </div>
 <div id="light-sweet-wti-and-brent-crude-oil" class="slide section level1">
 <h1>Light, Sweet: WTI and Brent Crude Oil</h1>
-<p>Because of its desirable qualities, light sweet crude oil is the most valuable classifications of crude oil in the world. When you hear people talk about crude oil prices, they almost always are referring to the price of light sweet crude oil, because of its importance in producing the majority of the worlds liquid transportation fuel and a significant portion of heating fuel.</p>
+<ul>
+<li>Because of its desirable qualities, light sweet crude oil is the most valuable classifications of crude oil in the world.</li>
+<li>When you hear people talk about crude oil prices, they almost always are referring to the price of light sweet crude oil, because of its importance in producing the majority of the worlds liquid transportation fuel and a significant portion of heating fuel.</li>
+</ul>
 <dl>
 <dt>WTI Crude Oil Price</dt>
 <dd><p>The West Texas Intermediate crude oil price is a benchmark price for light sweet crude oil produced in North America. The NYMEX futures contract for <a href="http://www.cmegroup.com/trading/energy/crude-oil/light-sweet-crude.html"><em>Light Sweet Crude Oil</em></a> is the WTI price delivered at <a href="https://www.google.com/maps/place/Cushing,+OK+74023/@43.8498418,-87.2836175,5.17z/data=!4m2!3m1!1s0x87b169f80014c5c1:0xfe855f1914b195a">Cushing, OK</a>.</p>
