--- a/Excel-files/ForecastingProduction-HistoricalAcreage.htm
+++ b/Excel-files/ForecastingProduction-HistoricalAcreage.htm
@@ -56,7 +56,7 @@ function fnGetIEVer()
 function fnBuildFrameset()
 {
  var szHTML="<frameset rows=\"*,18\" border=0 width=0 frameborder=no framespacing=0>"+
-  "<frame src=\""+document.all.item("shLink")[0].href+"\" name=\"frSheet\" noresize>"+
+  "<frame src=\""+document.all.item("shLink")[2].href+"\" name=\"frSheet\" noresize>"+
   "<frameset cols=\"54,*\" border=0 width=0 frameborder=no framespacing=0>"+
   "<frame src=\"\" name=\"frScroll\" marginwidth=0 marginheight=0 scrolling=no>"+
   "<frame src=\"\" name=\"frTabs\" marginwidth=0 marginheight=0 scrolling=no>"+
@@ -326,10 +326,11 @@ function fnSetActiveSheet(iSh)
   </x:ExcelWorksheets>
   <x:Stylesheet
    HRef="ForecastingProduction-HistoricalAcreage_files/stylesheet.css"/>
-  <x:WindowHeight>9075</x:WindowHeight>
-  <x:WindowWidth>10980</x:WindowWidth>
+  <x:WindowHeight>14100</x:WindowHeight>
+  <x:WindowWidth>28800</x:WindowWidth>
   <x:WindowTopX>0</x:WindowTopX>
   <x:WindowTopY>0</x:WindowTopY>
+  <x:ActiveSheet>2</x:ActiveSheet>
   <x:ProtectStructure>False</x:ProtectStructure>
   <x:ProtectWindows>False</x:ProtectWindows>
  </x:ExcelWorkbook>
@@ -337,7 +338,7 @@ function fnSetActiveSheet(iSh)
 </head>
 
 <frameset rows="*,39" border=0 width=0 frameborder=no framespacing=0>
- <frame src="ForecastingProduction-HistoricalAcreage_files/sheet001.htm" name="frSheet">
+ <frame src="ForecastingProduction-HistoricalAcreage_files/sheet003.htm" name="frSheet">
  <frame src="ForecastingProduction-HistoricalAcreage_files/tabstrip.htm" name="frTabs" marginwidth=0 marginheight=0>
  <noframes>
   <body>
