--- a/Excel-files/ForecastingProduction-HistoricalAcreage_files/sheet004.htm
+++ b/Excel-files/ForecastingProduction-HistoricalAcreage_files/sheet004.htm
@@ -57,9 +57,9 @@ else
  collapse;table-layout:fixed;width:1200pt'>
  <col width=64 span=25 style='width:48pt'>
  <tr height=90 style='height:67.5pt'>
-  <td rowspan=3 height=131 class=xl81 width=64 style='border-bottom:1.0pt dashed #ACA899;
+  <td rowspan=3 height=131 class=xl82 width=64 style='border-bottom:1.0pt dashed #ACA899;
   height:98.25pt;width:48pt'>Program</td>
-  <td rowspan=3 class=xl84 width=64 style='border-bottom:.5pt dotted black;
+  <td rowspan=3 class=xl85 width=64 style='border-bottom:.5pt dotted black;
   width:48pt'>Year</td>
   <td rowspan=3 class=xl67 width=64 style='border-bottom:.5pt dotted black;
   width:48pt'>Period</td>
@@ -82,9 +82,9 @@ else
   <td class=xl67 width=64 style='border-left:none;width:48pt'>CORN, GRAIN -
   PRICE RECEIVED, MEASURED IN $ / BU&nbsp;</td>
   <td width=64 style='width:48pt'></td>
-  <td rowspan=3 class=xl81 width=64 style='border-bottom:1.0pt dashed #ACA899;
+  <td rowspan=3 class=xl82 width=64 style='border-bottom:1.0pt dashed #ACA899;
   width:48pt'>Program</td>
-  <td rowspan=3 class=xl84 width=64 style='border-bottom:.5pt dotted black;
+  <td rowspan=3 class=xl85 width=64 style='border-bottom:.5pt dotted black;
   width:48pt'>Year</td>
   <td rowspan=3 class=xl67 width=64 style='border-bottom:.5pt dotted black;
   width:48pt'>Period</td>
@@ -132,8 +132,8 @@ else
     o:connecttype="rect"/>
    <o:lock v:ext="edit" shapetype="t"/>
   </v:shapetype><v:shape id="_x0000_s2049" type="#_x0000_t201" style='position:absolute;
-   direction:LTR;text-align:left;margin-left:0;margin-top:0;width:20.25pt;
-   height:18.75pt;z-index:1' strokecolor="windowText [64]" o:insetmode="auto">
+   margin-left:0;margin-top:0;width:20.25pt;height:18.75pt;z-index:1'
+   strokecolor="windowText [64]" o:insetmode="auto">
    <v:imagedata src="image023.emz" o:title=""/>
    <x:ClientData ObjectType="Pict">
     <x:SizeWithCells/>
@@ -152,9 +152,9 @@ else
   </span></td>
   <td rowspan=2 height=41 width=64 style='mso-ignore:colspan-rowspan;
   height:30.75pt;width:48pt'><!--[if gte vml 1]><v:shape id="_x0000_s2050"
-   type="#_x0000_t201" style='position:absolute;direction:LTR;text-align:left;
-   margin-left:0;margin-top:0;width:20.25pt;height:21pt;z-index:2'
-   strokecolor="windowText [64]" o:insetmode="auto">
+   type="#_x0000_t201" style='position:absolute;margin-left:0;margin-top:0;
+   width:20.25pt;height:21pt;z-index:2' strokecolor="windowText [64]"
+   o:insetmode="auto">
    <v:imagedata src="image025.emz" o:title=""/>
    <x:ClientData ObjectType="Pict">
     <x:SizeWithCells/>
@@ -178,9 +178,9 @@ else
   </span><![endif]><!--[if !mso & vml]><span style='width:48.0pt;height:30.75pt'></span><![endif]--></td>
   <td colspan=11 style='mso-ignore:colspan'></td>
   <td width=64 style='width:48pt' align=left valign=top><!--[if gte vml 1]><v:shape
-   id="_x0000_s2057" type="#_x0000_t201" style='position:absolute;direction:LTR;
-   text-align:left;margin-left:0;margin-top:0;width:20.25pt;height:18.75pt;
-   z-index:5' strokecolor="windowText [64]" o:insetmode="auto">
+   id="_x0000_s2057" type="#_x0000_t201" style='position:absolute;
+   margin-left:0;margin-top:0;width:20.25pt;height:18.75pt;z-index:5'
+   strokecolor="windowText [64]" o:insetmode="auto">
    <v:imagedata src="image023.emz" o:title=""/>
    <x:ClientData ObjectType="Pict">
     <x:SizeWithCells/>
@@ -199,9 +199,9 @@ else
   </span></td>
   <td rowspan=2 height=41 width=64 style='mso-ignore:colspan-rowspan;
   height:30.75pt;width:48pt'><!--[if gte vml 1]><v:shape id="_x0000_s2058"
-   type="#_x0000_t201" style='position:absolute;direction:LTR;text-align:left;
-   margin-left:0;margin-top:0;width:20.25pt;height:21pt;z-index:6'
-   strokecolor="windowText [64]" o:insetmode="auto">
+   type="#_x0000_t201" style='position:absolute;margin-left:0;margin-top:0;
+   width:20.25pt;height:21pt;z-index:6' strokecolor="windowText [64]"
+   o:insetmode="auto">
    <v:imagedata src="image025.emz" o:title=""/>
    <x:ClientData ObjectType="Pict">
     <x:SizeWithCells/>
@@ -274,42 +274,42 @@ else
   <td colspan=11 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 align=left style='height:15.0pt'>Program</td>
-  <td class=xl66 align=left>Year</td>
-  <td class=xl76 align=left>Corn Aver<span style='display:none'>age Prices
-  Received by Farmers</span></td>
-  <td class=xl76 colspan=5 align=left style='mso-ignore:colspan'>Soybean
-  Average Prices Received by Farmers</td>
+  <td height=20 style='height:15.0pt'>Program</td>
+  <td class=xl66>Year</td>
+  <td class=xl76>Corn Aver<span style='display:none'>age Prices Received by
+  Farmers</span></td>
+  <td class=xl76 colspan=5 style='mso-ignore:colspan'>Soybean Average Prices
+  Received by Farmers</td>
   <td colspan=17 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 align=left style='height:15.0pt'>SURVEY</td>
+  <td height=20 style='height:15.0pt'>SURVEY</td>
   <td align=right>2016</td>
   <td colspan=23 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 align=left style='height:15.0pt'>SURVEY</td>
+  <td height=20 style='height:15.0pt'>SURVEY</td>
   <td class=xl66 align=right>2015</td>
   <td class=xl77 width=64 style='width:48pt'>3.71</td>
   <td class=xl79 align=right>9.49</td>
   <td colspan=21 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 align=left style='height:15.0pt'>SURVEY</td>
+  <td height=20 style='height:15.0pt'>SURVEY</td>
   <td class=xl66 align=right>2014</td>
   <td class=xl77 width=64 style='border-top:none;width:48pt'>4.11</td>
   <td class=xl73 width=64 style='border-left:none;width:48pt'>12.5</td>
   <td colspan=21 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 align=left style='height:15.0pt'>SURVEY</td>
+  <td height=20 style='height:15.0pt'>SURVEY</td>
   <td class=xl66 align=right>2013</td>
   <td class=xl77 width=64 style='border-top:none;width:48pt'>6.15</td>
   <td class=xl73 width=64 style='border-top:none;border-left:none;width:48pt'>14.1</td>
   <td colspan=21 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 align=left style='height:15.0pt'>SURVEY</td>
+  <td height=20 style='height:15.0pt'>SURVEY</td>
   <td class=xl66 align=right>2012</td>
   <td class=xl77 width=64 style='border-top:none;width:48pt'>6.67</td>
   <td class=xl73 width=64 style='border-top:none;border-left:none;width:48pt'>14</td>
@@ -348,9 +348,8 @@ else
  <tr height=21 style='height:15.75pt'>
   <td height=21 width=64 style='height:15.75pt;width:48pt' align=left
   valign=top><!--[if gte vml 1]><v:shape id="_x0000_s2051" type="#_x0000_t201"
-   style='position:absolute;direction:LTR;text-align:left;margin-left:0;
-   margin-top:0;width:20.25pt;height:18.75pt;z-index:3' strokecolor="windowText [64]"
-   o:insetmode="auto">
+   style='position:absolute;margin-left:0;margin-top:0;width:20.25pt;height:18.75pt;
+   z-index:3' strokecolor="windowText [64]" o:insetmode="auto">
    <v:imagedata src="image023.emz" o:title=""/>
    <x:ClientData ObjectType="Pict">
     <x:SizeWithCells/>
@@ -368,9 +367,9 @@ else
   </table>
   </span></td>
   <td align=left valign=top><!--[if gte vml 1]><v:shape id="_x0000_s2052"
-   type="#_x0000_t201" style='position:absolute;direction:LTR;text-align:left;
-   margin-left:0;margin-top:0;width:20.25pt;height:21pt;z-index:4'
-   strokecolor="windowText [64]" o:insetmode="auto">
+   type="#_x0000_t201" style='position:absolute;margin-left:0;margin-top:0;
+   width:20.25pt;height:21pt;z-index:4' strokecolor="windowText [64]"
+   o:insetmode="auto">
    <v:imagedata src="image025.emz" o:title=""/>
    <x:ClientData ObjectType="Pict">
     <x:SizeWithCells/>
@@ -391,9 +390,9 @@ else
   <td colspan=11 style='mso-ignore:colspan'></td>
   <td rowspan=2 height=42 class=xl70 width=64 style='mso-ignore:colspan-rowspan;
   height:31.5pt;width:48pt'><!--[if gte vml 1]><v:shape id="_x0000_s2059"
-   type="#_x0000_t201" style='position:absolute;direction:LTR;text-align:left;
-   margin-left:0;margin-top:0;width:20.25pt;height:18.75pt;z-index:7'
-   strokecolor="windowText [64]" o:insetmode="auto">
+   type="#_x0000_t201" style='position:absolute;margin-left:0;margin-top:0;
+   width:20.25pt;height:18.75pt;z-index:7' strokecolor="windowText [64]"
+   o:insetmode="auto">
    <v:imagedata src="image023.emz" o:title=""/>
    <x:ClientData ObjectType="Pict">
     <x:SizeWithCells/>
@@ -417,9 +416,9 @@ else
   </span><![endif]><!--[if !mso & vml]><span style='width:48.0pt;height:31.5pt'></span><![endif]--></td>
   <td rowspan=2 height=42 width=64 style='mso-ignore:colspan-rowspan;
   height:31.5pt;width:48pt'><!--[if gte vml 1]><v:shape id="_x0000_s2060"
-   type="#_x0000_t201" style='position:absolute;direction:LTR;text-align:left;
-   margin-left:0;margin-top:0;width:20.25pt;height:21pt;z-index:8'
-   strokecolor="windowText [64]" o:insetmode="auto">
+   type="#_x0000_t201" style='position:absolute;margin-left:0;margin-top:0;
+   width:20.25pt;height:21pt;z-index:8' strokecolor="windowText [64]"
+   o:insetmode="auto">
    <v:imagedata src="image025.emz" o:title=""/>
    <x:ClientData ObjectType="Pict">
     <x:SizeWithCells/>
